# providence

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  wasm-build-backend.sh
assets/client_skin/: game.cob  gameover.cob  load_assets.cob  load_settings.cob  loadscreen.cob  main.cob  zsort.cob
assets/client_skin/assets/: tiles.aseprite
assets/client_skin/game/: hud.cob  infocard.cob  main.cob  settings.cob  tileselect.cob
assets/ui_common/: constants.cob
assets/user_client/: main.cob  sidebar.cob  zsort.cob
assets/user_client/sections/: home.cob  main.cob  play.cob  settings.cob
assets/user_client/widgets/: main.cob  popup.cob  request_indicator.cob  scroll.cob
bins/backend/: Cargo.toml  README.md
bins/backend/config/backend/: game_hub.rawcob  game_hub.toml  host_backend.rawcob  host_backend.toml
bins/backend/config/frontend/: host_frontend.toml  lobby.rawcob
bins/backend/config/game/: game.toml
bins/backend/src/: main.rs
bins/client/: Cargo.toml  README.md
bins/client/config/client/: game_client.rawcob
bins/client/config/frontend/: host_frontend.rawcob  lobby.toml
bins/client/config/game/: game.rawcob
bins/client/config/user_client/: user_client.rawcob  user_client.toml
bins/client/src/: main.rs
bins/game_client/: Cargo.toml  README.md
bins/game_client/config/client/: game_client.toml
bins/game_client/config/game/: game.rawcob
bins/game_client/src/: main.rs
bins/game_instance/: Cargo.toml  README.md
bins/game_instance/config/game/: game.rawcob  game.toml
bins/game_instance/src/: main.rs
bins/playtest/: Cargo.toml  README.md
bins/playtest/config/game/: game.toml
bins/playtest/src/: main.rs
config/: README.md
config/backend/: game_hub.rawcob  game_hub.toml  host_backend.rawcob  host_backend.toml  manifest.rawcob  manifest.toml
config/client/: client.rawcob  manifest.rawcob  manifest.toml
config/frontend/: host_frontend.rawcob  host_frontend.toml  lobby.rawcob  lobby.toml  manifest.rawcob  manifest.toml
config/game/: building_data.rawcob  game.rawcob  game.toml  hq.toml  manifest.rawcob  manifest.toml  tile_data.rawcob
config/game_client/: game_client.toml
config/user_client/: manifest.rawcob  manifest.toml  user_client.rawcob  user_client.toml
libs/client_core/: Cargo.toml
libs/client_core/src/: game_end.rs  lib.rs  mapgen.rs  plugin.rs  rounds.rs  sets.rs  setup.rs  states.rs
libs/client_core/src/game_channel/: handle_game_messages.rs  handle_game_messages_impl.rs  mod.rs
libs/client_core/src/player_inputs/: handle_command_inputs.rs  handle_dev_inputs.rs  handle_player_inputs.rs  mod.rs  plugin.rs
libs/client_skin/: Cargo.toml
libs/client_skin/src/: client_temp.rs  events.rs  fps_tracker.rs  lib.rs  loading_sim.rs  mapgen.rs  plugin.rs  sprite_layer.rs  state_changes.rs
libs/client_skin/src/map/: camera_control.rs  cursor.rs  map_control.rs  map_effects.rs  mapgen.rs  mod.rs  plugin.rs  tile_states.rs
libs/client_skin/src/ui/: game_over.rs  loadscreen.rs  mod.rs  plugin.rs
libs/client_skin/src/ui/game/: hud.rs  infocard.rs  mod.rs  plugin.rs  scoreboard.rs  tileselect.rs
libs/client_skin/src/ui/game/settings/: audio_section.rs  commands_section.rs  dev_section.rs  game_section.rs  hotkeys_section.rs  mod.rs  plugin.rs  video_section.rs
libs/game_core/: Cargo.toml
libs/game_core/src/: client_connect.rs  game_data.rs  game_rand.rs  lib.rs  plugin.rs  prng.rs  rounds.rs  sets.rs  setup.rs  states.rs  ticks.rs  time.rs
libs/game_core/src/buildings/: data.rs  hq.rs  mod.rs
libs/game_core/src/client/: mod.rs  player_map.rs  player_state.rs  watcher_map.rs
libs/game_core/src/client_channel/: client_request.rs  game_msg.rs  handle_client_requests.rs  handle_client_requests_impl.rs  handle_command_requests_impl.rs  handle_dev_requests_impl.rs  mod.rs
libs/game_core/src/map/: data.rs  mapgen.rs  mod.rs  plugin.rs  tiles.rs
libs/game_core/src/meta/: game_context.rs  game_duration_config.rs  game_initializer.rs  game_over_report.rs  mod.rs  replication.rs
libs/game_core/src/resources/: cost.rs  data.rs  mod.rs
libs/user_client/: Cargo.toml
libs/user_client/src/: lib.rs  pending_request.rs  plugin.rs  timer_configs.rs
libs/user_client/src/game/: client_starter.rs  config_temp.rs  handle_client_instance_reports.rs  local_game.rs  mod.rs  plugin.rs
libs/user_client/src/host_client/: handle_host_incoming.rs  handle_host_incoming_impl.rs  host_client_connect.rs  mod.rs  plugin.rs
libs/user_client/src/lobbies/: ack_request.rs  join_lobby.rs  lobby_display.rs  lobby_list.rs  lobby_page.rs  make_lobby.rs  mod.rs  plugin.rs
libs/user_client/src/ui/: ack_request_popup.rs  cobweb_ext.rs  mod.rs  plugin.rs  popup_utils.rs  reconnecting_overlay.rs  sidebar.rs
libs/user_client/src/ui/home_section/: plugin.rs
libs/user_client/src/ui/play_section/: join_lobby_popup.rs  lobby_display.rs  lobby_list.rs  make_lobby_popup.rs  mod.rs  plugin.rs
libs/user_client/src/ui/settings_section/: plugin.rs
libs/utils/: Cargo.toml
libs/utils/src/: config_reading.rs  lib.rs  reinit.rs  root_configs.rs
libs/utils_gui/: Cargo.toml
libs/utils_gui/src/: aseprite_map.rs  lib.rs  sprite_layer.rs
libs/wiring_backend/: Cargo.toml
libs/wiring_backend/src/: game_launch_pack_source.rs  host_client_config.rs  lib.rs  lobby_checker.rs  lobby_contents.rs
libs/wiring_client_instance/: Cargo.toml
libs/wiring_client_instance/src/: client_app_setup.rs  client_factory.rs  global_plugin.rs  lib.rs
libs/wiring_game_instance/: Cargo.toml
libs/wiring_game_instance/src/: client_context.rs  client_initializer.rs  game_app_setup.rs  game_config.rs  game_factory.rs  game_factory_config.rs  lib.rs  protocol_id.rs
tests/: Cargo.toml
wasm/client/: index.html
xdocker/: backend.Dockerfile
