[workspace.package]
description = "Providence"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.1"
edition = "2021"
keywords = ["gamedev", "multiplayer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/providence"

[workspace]
resolver = "2"
members  = [
    "bins/*",
    "libs/*",
]

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
bevy_cobweb = { version = "0.16" }
bevy_cobweb_ui = { version = "0.12" }
#bevy_cobweb_ui = { rev = "49eb699", git = "https://github.com/UkoeHB/bevy_cobweb_ui" }

bevy_framepace = { version = "0.18" }
#bevy_renet2 = { version = "0.1.1", package = "bevy_renet2" }
bevy_renet2 = { version = "0.8", default-features = false }
renet2 = { version = "0.8", default-features = false }
renetcode2 = { version = "0.8", default-features = false }
renet2_netcode = { version = "0.8", default-features = false }
renet2_setup = { version = "0.8", default-features = false }
bevy_replicon = { version = "0.32", default-features = false }
#bevy_replicon  = { git = "https://github.com/UkoeHB/bevy_replicon", rev = "2971100" }
bevy_replicon_attributes = { version = "0.10" }
#bevy_replicon_attributes = { git = "https://github.com/UkoeHB/bevy_replicon_attributes", rev = "0f19340" }
bevy_simplenet = { version = "0.15", default-features = false }
#bevy_simplenet = { git = "https://github.com/UkoeHB/bevy_simplenet", rev = "4abc765", default-features = false }
#iyes_progress = { version = "0.13" , features = [ "assets" ] }
iyes_progress = { git = "https://github.com/UkoeHB/iyes_progress", rev = "343879e", features = [ "assets" ] }

bevy_girk_backend_public    = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_client_fw         = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_client_instance   = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_game_fw           = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_game_hub_server   = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_game_instance     = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_host_server       = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_utils             = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_wiring_common     = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_wiring_server     = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }
bevy_girk_wiring_client     = { git = "https://github.com/UkoeHB/bevy_girk", rev = "604324c" }

axum-server        = { version = "0.7", default-features = false }  # Locked to bevy_simplenet's axum-server version.
clap               = { version = "4.4", default-features = false, features = [ "std" ] }
enfync             = { version = "0.1", default-features = false }
ezsockets          = { version = "0.7", default-features = false }
#ezsockets          = { git = "https://github.com/UkoeHB/ezsockets", rev = "147f751", default-features = false }
rustls             = { version = "0.23" }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
serde_with         = { version = "3.0" }
smol_str           = { version = "0.2" }  # Locked to Bevy's smol_str version.
toml               = { version = "0.8", default_features = false }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url                = { version = "2.4" }
wasm-bindgen       = { version = "0.2" }
wasm-timer         = { version = "0.2" }
tokio              = { version = "1.42", default-features = false }

[profile.test]
opt-level = 0  #no optimizations for local tests

[profile.dev]
opt-level = 1  #minimal optimizations for local debug builds
debug     = true

[profile.dev.package."*"]
opt-level = 3  #maximum optimizations for dependencies used in debug builds

[profile.release]
lto           = "thin"  #link time optimizations (fast)
strip         = true    #minimize binary size with symbol stripping
codegen-units = 1       #maximize performance

[profile.release-small]
inherits = "release"
opt-level = "s"
lto = "fat"

[profile.release-small.package."*"]
opt-level = "s"
strip = true

# The 'release' profile must be used for WASM release builds, so we need separate release profiles for
# anything else. This profile improves compile times at the expense of ideal performance.
[profile.release-unoptimized]
inherits = "release"
lto = false
strip = "none"
codegen-units = 16
