[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "backend"
test    = false
doctest = false

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
axum-server        = { workspace = true, features = ["tls-rustls"] }
bevy               = { workspace = true }
bevy_cobweb        = { workspace = true }
bevy_simplenet     = { workspace = true, features = ["tls-rustls"] }
clap               = { workspace = true, features = [ "derive" ] }
enfync             = { workspace = true }
renet2             = { workspace = true }
renetcode2         = { workspace = true }
renet2_setup       = { workspace = true, features = ["netcode", "ws_server_transport", "ws-rustls"] }
rustls             = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
tracing            = { workspace = true }
url                = { workspace = true }

bevy_girk_backend_public  = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_hub_server = { workspace = true }
bevy_girk_game_instance   = { workspace = true, features = ["process"] }
bevy_girk_host_server     = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring_server   = { workspace = true }

game_core            = { path = "../../libs/game_core" }
wiring_backend       = { path = "../../libs/wiring_backend" }
wiring_game_instance = { path = "../../libs/wiring_game_instance" }
