[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "client"
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["user_client/dev", "wiring_client_instance/dev", "wiring_game_instance/dev", "wiring_backend/dev"]

[dependencies]
bevy               = { workspace = true }
clap               = { workspace = true, default-features = true, features = [ "derive" ] }
enfync             = { workspace = true }
bevy_simplenet     = { workspace = true, features = [ "client", "bevy" ] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
url                = { workspace = true }
wasm-timer         = { workspace = true }

bevy_girk_backend_public    = { workspace = true }
bevy_girk_client_instance   = { workspace = true }
bevy_girk_game_instance     = { workspace = true }
bevy_girk_utils             = { workspace = true }

user_client = { path = "../../libs/user_client", default-features = false }
utils = { path = "../../libs/utils", default-features = false }
wiring_backend = { path = "../../libs/wiring_backend", default-features = false }
wiring_client_instance = { path = "../../libs/wiring_client_instance", default-features = false }
wiring_game_instance = { path = "../../libs/wiring_game_instance", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustls = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"]} # infects dependencies with wasm_js feature
console_error_panic_hook = { version = "0.1" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
tracing-wasm = { version = "0.2" }
