[package]
name = "game_client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "game_client"
test    = false
doctest = false

[features]
dev = ["wiring_client_instance/dev"]

[dependencies]
bevy               = { workspace = true, default-features = true }
clap               = { workspace = true, features = [ "derive" ] }
renet2_setup       = { workspace = true, features = ["netcode"] }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std" ] }
tracing            = { workspace = true }

bevy_girk_client_fw       = { workspace = true }
bevy_girk_client_instance = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true, features = ["process"] }

wiring_client_instance = { path = "../../libs/wiring_client_instance" }
