[package]
name = "game_client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "game_client"
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["game_core/dev", "wiring_client_instance/dev"]
egui = ["dep:bevy-inspector-egui", "dep:bevy_egui"]

[dependencies]
bevy               = { workspace = true }
bevy_cobweb_ui     = { workspace = true }
clap               = { workspace = true, features = [ "derive" ] }
renet2_setup       = { workspace = true, features = ["netcode"] }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std" ] }
tracing            = { workspace = true }

bevy_girk_client_fw       = { workspace = true }
bevy_girk_client_instance = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true, features = ["process"] }

game_core = { path = "../../libs/game_core", default-features = false }
utils = { path = "../../libs/utils", default-features = false }
wiring_client_instance = { path = "../../libs/wiring_client_instance", default-features = false }

bevy-inspector-egui = { version = "0.31", optional = true }
bevy_egui = { version = "0.34", default-features = false, optional = true }
