[package]
name = "playtest"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "playtest"
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "wiring_game_instance/dev", "game_core/dev"]

[dependencies]
bevy               = { workspace = true }
bevy_cobweb        = { workspace = true }
bevy_simplenet     = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
enfync             = { workspace = true }
renet2_setup       = { workspace = true, features = ["netcode"] }
serde_json         = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "tracing-log"] }
tracing            = { workspace = true }
tokio              = { workspace = true, default-features = false, features = ["process"] }

bevy_girk_game_fw = { workspace = true }
bevy_girk_game_instance = { workspace = true, features = ["process"] }
bevy_girk_utils = { workspace = true }

game_core            = { path = "../../libs/game_core", default-features = false }
utils                = { path = "../../libs/utils", default-features = false }
wiring_backend       = { path = "../../libs/wiring_backend", default-features = false }
wiring_game_instance = { path = "../../libs/wiring_game_instance", default-features = false }
