[package]
name = "playtest"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "playtest"
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["wiring_game_instance/dev"]

[dependencies]
clap               = { workspace = true, features = ["derive"] }
enfync             = { workspace = true }
renet2_setup       = { workspace = true, features = ["netcode"] }
serde_json         = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "tracing-log"] }
tracing            = { workspace = true }
tokio              = { workspace = true, default-features = false, features = ["process"] }

bevy_girk_game_fw = { workspace = true }
bevy_girk_game_instance = { workspace = true, features = ["process"] }
bevy_girk_utils = { workspace = true }

utils                = { path = "../../libs/utils", default-features = false }
wiring_backend       = { path = "../../libs/wiring_backend", default-features = false }
wiring_game_instance = { path = "../../libs/wiring_game_instance", default-features = false }
