[package]
name = "client_core"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["game_core/dev", "wiring_game_instance/dev"]

[dependencies]
bevy           = { workspace = true }
bevy_cobweb    = { workspace = true }
bevy_replicon  = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }
wasm-timer     = { workspace = true }

bevy_girk_client_fw = { workspace = true }
bevy_girk_game_fw   = { workspace = true }
bevy_girk_utils     = { workspace = true }

game_core  = { path = "../game_core", default-features = false, features = ["commands"] }
wiring_game_instance  = { path = "../wiring_game_instance", default-features = false }
