[package]
name = "client_skin"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev", "client_core/dev", "game_core/dev", "utils_gui/dev", "wiring_game_instance/dev"]

[dependencies]
bevy            = { workspace = true, default-features = true }
bevy_aseprite_ultra = { workspace = true }
bevy_cobweb     = { workspace = true }
bevy_cobweb_ui  = { workspace = true, features = ["colors", "widgets"] } # can't do "serde", messes up reflect(default)
bevy_framepace  = { workspace = true }
bevy_replicon   = { workspace = true }
bevy_renet2     = { workspace = true }
hexx            = { workspace = true }
iyes_progress   = { workspace = true }
tracing         = { workspace = true }

bevy_girk_client_fw = { workspace = true }
bevy_girk_client_instance = { workspace = true }
bevy_girk_game_fw = { workspace = true }
bevy_girk_utils = { workspace = true }

client_core = { path = "../client_core", default-features = false }
game_core   = { path = "../game_core", default-features = false, features = ["commands"] }
utils  = { path = "../utils", default-features = false }
utils_gui = { path = "../utils_gui", default-features = false }
wiring_game_instance  = { path = "../wiring_game_instance", default-features = false }
