[package]
name = "game_core"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                     = { workspace = true }
bevy_cobweb              = { workspace = true }
bevy_replicon            = { workspace = true }
bevy_replicon_attributes = { workspace = true }
serde                    = { workspace = true }
tracing                  = { workspace = true }

bevy_girk_game_fw = { workspace = true }
bevy_girk_utils   = { workspace = true }
