[package]
name = "game_core"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
default = ["dev", "commands"]
dev = ["commands"]
# Enables handling of command inputs from clients.
commands = []

[dependencies]
bevy                     = { workspace = true }
bevy_121                 = { workspace = true }
bevy_cobweb              = { workspace = true }
bevy_replicon            = { workspace = true }
bevy_replicon_attributes = { workspace = true }
hexx                     = { workspace = true, features = ["serde"] }
renet2                   = { workspace = true }
serde                    = { workspace = true, features = ["rc"] }
tracing                  = { workspace = true }

bevy_girk_game_fw = { workspace = true }
bevy_girk_utils   = { workspace = true }

utils = { path = "../utils", default-features = false }
