[package]
name = "user_client"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy            = { workspace = true, default-features = true }
bevy_cobweb     = { workspace = true }
bevy_cobweb_ui  = { workspace = true, features = ["colors", "widgets"] } # can't do "serde", messes up reflect(default)
bevy_framepace  = { workspace = true }
bevy_simplenet  = { workspace = true, features = ["client", "bevy"] }
enfync          = { workspace = true }
iyes_progress   = { workspace = true }
renet2_setup    = { workspace = true, features = ["netcode"] }
serde           = { workspace = true }
smol_str        = { workspace = true }
tracing         = { workspace = true }

bevy_girk_backend_public    = { workspace = true, features = ["client"] }
bevy_girk_client_instance   = { workspace = true }
bevy_girk_client_fw         = { workspace = true }
bevy_girk_game_fw           = { workspace = true }
bevy_girk_game_instance     = { workspace = true }
bevy_girk_utils             = { workspace = true }

client_core = { path = "../client_core" }
game_core = { path = "../game_core" }
wiring_backend = { path = "../wiring_backend" }
wiring_client_instance = { path = "../wiring_client_instance" }
wiring_game_instance = { path = "../wiring_game_instance" }
