[package]
name = "user_client"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy_cobweb     = { workspace = true }
bevy_cobweb_ui  = { workspace = true, features = ["colors", "widgets"] } # can't do "serde", messes up reflect(default)
bevy_framepace  = { workspace = true }
bevy_simplenet  = { workspace = true, features = ["client", "bevy"] }
enfync          = { workspace = true }
iyes_progress   = { workspace = true }
renet2_setup    = { workspace = true, features = ["netcode"] }
serde           = { workspace = true }
smol_str        = { workspace = true }
tracing         = { workspace = true }

bevy_girk_backend_public    = { workspace = true, features = ["client"] }
bevy_girk_client_instance   = { workspace = true }
bevy_girk_client_fw         = { workspace = true }
bevy_girk_game_fw           = { workspace = true }
bevy_girk_game_instance     = { workspace = true }
bevy_girk_utils             = { workspace = true }

client_core = { path = "../client_core", default-features = false }
game_core = { path = "../game_core", default-features = false }
utils = { path = "../utils", default-features = false }
wiring_backend = { path = "../wiring_backend", default-features = false }
wiring_client_instance = { path = "../wiring_client_instance", default-features = false }
wiring_game_instance = { path = "../wiring_game_instance", default-features = false }

[dependencies.bevy]
workspace = true
features = [
  "std",
  "async_executor",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_text",
  "bevy_state",
  "bevy_log",
  "bevy_picking",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_sprite_picking_backend",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "png",
  "x11",
  "wav"
]
