[package]
name = "utils_gui"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
default = ["dev"]

dev = []

[dependencies]
bevy_aseprite_ultra = { workspace = true }
bevy_cobweb = { workspace = true }
bevy_cobweb_ui = { workspace = true }
ordered-float = { workspace = true }
fluent-langneg = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dependencies.bevy]
workspace = true
features = [
    "std",
    "bevy_picking"
]
