[package]
name = "wiring_backend"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { workspace = true }
bevy_replicon  = { workspace = true }
bevy_simplenet = { workspace = true }
renet2         = { workspace = true }
renet2_setup   = { workspace = true, features = ["netcode"] }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_backend_public  = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }

wiring_game_instance = { path = "../wiring_game_instance" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }
