[package]
name = "wiring_client_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
dev = ["client_skin/dev"]

[dependencies]
bevy = { workspace = true, default_features = true }
bevy_cobweb = { workspace = true }
bevy_cobweb_ui = { workspace = true }
iyes_progress = { workspace = true }
renet2_setup = { workspace = true, features = ["netcode", "memory_transport"] }
tracing = { workspace = true }

bevy_girk_client_instance = { workspace = true }
bevy_girk_client_fw       = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring_client   = { workspace = true, features = ["memory_transport"] }

client_core          = { path = "../client_core" }
client_skin          = { path = "../client_skin" }
game_core            = { path = "../game_core" }
wiring_game_instance = { path = "../wiring_game_instance" }
