[package]
name = "wiring_client_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
default = ["dev"]
dev = ["game_core/dev", "client_core/dev", "client_skin/dev"]

[dependencies]
bevy = { workspace = true, default-features = true }
bevy_cobweb = { workspace = true }
bevy_cobweb_ui = { workspace = true }
iyes_progress = { workspace = true }
renet2_setup = { workspace = true, features = ["netcode", "memory_transport"] }
tracing = { workspace = true }

bevy_girk_client_instance = { workspace = true }
bevy_girk_client_fw       = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring_client   = { workspace = true, features = ["memory_transport"] }

client_core          = { path = "../client_core", default-features = false }
client_skin          = { path = "../client_skin", default-features = false }
game_core            = { path = "../game_core", default-features = false }
wiring_game_instance = { path = "../wiring_game_instance", default-features = false }
